--- a/iframe.html
+++ b/iframe.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body>
-    <iframe id="bookiframe" width="100%" height="100%" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen scrolling="no"></iframe>
+    <iframe id="bookiframe" width="100%" height="100%" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen scrolling="auto"></iframe>
     <script src="<!-- @path jquery-1.8.3.min.js -->"></script>
     <script>
         $(function(){
