--- a/it/index.html
+++ b/it/index.html
@@ -13,64 +13,7 @@
 <meta name="robots" content="noindex" />
 <meta name="description" content="Proponiamo abbigliamento formalwear, inspirato dall’universo della vela e dal mare, fatto in un modo diverso. Venite da nostro sito, sarà nostra premura di farvi scoprire la nostra collezione di Spi Shirt designata con un nuovo sistema di bottone provenendo dal mondo de la vela e con una tasca sul petto in forma di Spi. Along with Auspibor wind out new dream" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<script>
-      (function protect () {
-          'use strict'
-          var PASSWORD = 'boregor'
-          var PATTERN = /\bpassword\s*=\s*(.*?)(;|$)/
-          var MAX_ATTEMPT = 3
-          var PROMPT_TEXT = 'Enter password'
-          var FORBIDDEN_URL = '/403.html'
-          var testResults
-          var autoPass
-          var params
-          var query = top.document.location.search.substring(1)
-          var parsedQuery
-          var input
-          var attempt = 0
-          var expirationDate
-          var paramTuple
-
-          console.debug(query)
-
-          if (query) {
-              parsedQuery = query.split('&').map(function (param){return param.split('=')})
-
-              for(paramTuple of parsedQuery){
-                  console.debug(paramTuple)
-                  if(paramTuple[0] === 'password'){
-                      console.debug("auto pass")
-                      autoPass = paramTuple[1]
-                      break
-                  }
-              }
-          }
-
-          if (!autoPass) {
-              testResults = PATTERN.exec(document.cookie)
-              autoPass = testResults && testResults[1]
-          }
-
-          if (autoPass !== PASSWORD) {
-              while (attempt++ < MAX_ATTEMPT) {
-                  if (input = prompt(PROMPT_TEXT, '')) {
-                      if (input === PASSWORD) {
-                          console.debug("password accepted")
-                          expirationDate = new Date()
-                          expirationDate.setTime(expirationDate.getTime() + 30 * 24 * 60 * 60 * 1000)
-                          document.cookie = `password=${input};path=/;expires=${expirationDate.toUTCString()}`
-                          return
-                      }
-                  } else {
-                      document.location.replace(FORBIDDEN_URL)
-                      return
-                  }
-              }
-              console.error("access denied")
-              document.location.replace(FORBIDDEN_URL)
-          }
-      })()
-  </script>
+<script src="/modules/book/Build/assets/js/protect.js"></script>
 <title>Auspibor.com</title>
 <link rel="sitemap" href="sitemap.xml" />
 <link type="text/plain" rel="author" href="../humans.txt" />
@@ -836,7 +779,7 @@ Noto è il vento del sud (Auster in inglese)
 </div>
 </div>
 </div>
-<div id="grimoire_page" class="events-through-all" data-bind="page: { alt_id:'no', id:'book1', role: 'start', title: 'Libro Antico', htitle:'Libro Antico', frame: 'iframe', sourceOnShow: '/modules/book/Build/book-it.html?v=2016.08.29.14.37.00' , showElement: fadeIn, hideElement: fadeOut}">
+<div id="grimoire_page" class="events-through-all" data-bind="page: { alt_id:'no', id:'book1', role: 'start', title: 'Libro Antico', htitle:'Libro Antico', frame: 'iframe', sourceOnShow: '/modules/book/Build/book-it.html?v=2016.09.02.21.50.00' , showElement: fadeIn, hideElement: fadeOut}">
 <iframe id="bookiframe" width="100%" frameborder="0" class="abs abs-top abs-bottom abs-right abs-left z10 h100p man pan"></iframe>
 </div>
 </div>
